--- a/css/styles.css
+++ b/css/styles.css
@@ -48,13 +48,7 @@ body {
 }
 
 .icon {
-    fill: #4d5ae5;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.icon:hover,
-.icon:focus {
-    fill: #31d0aa;
+    display: block;
 }
 
 /* ========== Header styles========== */
@@ -232,6 +226,14 @@ body {
     width: calc((100%-72px)/4);
 }
 
+.skills-icon-background {
+    background-color: #f4f4fd;
+    padding: 24px 100px;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    margin-bottom: 8px;
+}
+
 .skills-description {
     font-size: 16px;
     line-height: 1.5;
@@ -264,8 +266,8 @@ body {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
-.names-jobs {
-    padding: 32px 0;
+.card-content {
+    padding: 32px 16px
 }
 
 .our-team-decription-title {
@@ -283,6 +285,22 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
+    margin-bottom: 8px;
+}
+
+.our-team-icon {
+    fill: #4d5ae5;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.our-team-icon:hover,
+.our-team-icon:focus {
+    fill: #404bbf;
+}
+
+.our-team-icon-container {
+    display: flex;
+    column-gap: 24px;
 }
 
 /* ========== Portfolio-section styles ========== */
@@ -304,9 +322,19 @@ body {
 }
 
 .box-overlay {
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
     overflow: hidden;
+}
+
+.portfolio-list-item {
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list-item:hover,
+.portfolio-list-item:focus {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+        0 1px 1px 0 rgba(46, 47, 66, 0.16),
+        0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .overlay {
@@ -331,13 +359,6 @@ body {
 .box-overlay:hover .overlay,
 .box-overlay:focus .overlay {
     transform: translateY(0);
-}
-
-.box-overlay:hover,
-.box-overlay:focus {
-    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-        0 1px 1px 0 rgba(46, 47, 66, 0.16),
-        0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-text {
@@ -403,4 +424,28 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #fff;
+    margin-bottom: 16px;
+}
+
+.footer-icon {
+    fill: #4d5ae5;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-icon:hover,
+.footer-icon:focus {
+    fill: #31d0aa;
+}
+
+.footer-icon-container {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-container {
+    display: flex;
+}
+
+.social-media {
+    margin-left: 120px;
 }
