--- a/css/styles.css
+++ b/css/styles.css
@@ -49,11 +49,13 @@ body {
 
 .icon {
     display: block;
+    fill: #f4f4fd;
 }
 
 /* ========== Header styles========== */
 .header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .logo {
@@ -152,8 +154,9 @@ body {
 .hero {
     background-color: #2e2f42;
     padding: 188px 0;
-    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
     background-repeat: no-repeat;
+    background-position: center;
     background-clip: border-box;
     background-size: cover;
     max-width: 1440px;
@@ -227,8 +230,11 @@ body {
 }
 
 .skills-icon-background {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #f4f4fd;
-    padding: 24px 100px;
+    height: 112px;
     border: 1px solid #8e8f99;
     border-radius: 4px;
     margin-bottom: 8px;
@@ -267,7 +273,35 @@ body {
 }
 
 .card-content {
-    padding: 32px 16px
+    padding: 32px 0;
+}
+
+.our-team-icon-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+}
+
+.our-team-icon-list-item {
+    width: 40px;
+    height: 40px;
+}
+
+.our-team-icon-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #4d5ae5;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.our-team-icon-links:hover,
+.our-team-icon-links:focus {
+    background-color: #404bbf;
 }
 
 .our-team-decription-title {
@@ -286,16 +320,6 @@ body {
     letter-spacing: 0.02em;
     text-align: center;
     margin-bottom: 8px;
-}
-
-.our-team-icon {
-    fill: #4d5ae5;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.our-team-icon:hover,
-.our-team-icon:focus {
-    fill: #404bbf;
 }
 
 .our-team-icon-container {
@@ -427,25 +451,39 @@ body {
     margin-bottom: 16px;
 }
 
-.footer-icon {
-    fill: #4d5ae5;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-icon:hover,
-.footer-icon:focus {
-    fill: #31d0aa;
-}
-
-.footer-icon-container {
+.footer-icon-list {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 16px;
+}
+
+.footer-icon-list-item {
+    width: 40px;
+    height: 40px;
+}
+
+.footer-icon-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #4d5ae5;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-icon-links:hover,
+.footer-icon-links:focus {
+    background-color: #31d0aa;
 }
 
 .footer-container {
     display: flex;
+    justify-content: baseline;
 }
 
-.social-media {
-    margin-left: 120px;
+.footer-logo-content {
+    margin-right: 120px;
 }
