--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,15 @@ body {
     fill: #f4f4fd;
 }
 
+input {
+    display: block;
+    font-family: inherit;
+}
+
+textarea {
+    font-family: inherit;
+}
+
 /* ========== Header styles========== */
 .header {
     border-bottom: 1px solid #e7e9fc;
@@ -405,6 +414,12 @@ body {
     padding: 100px 0;
 }
 
+.footer-container {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+}
+
 .footer-logo {
     display: inline-block;
     margin-bottom: 16px;
@@ -435,6 +450,10 @@ body {
     width: 264px;
 }
 
+.social-media {
+    margin-right: 80px;
+}
+
 .social-media-text {
     font-weight: 500;
     font-size: 16px;
@@ -443,6 +462,7 @@ body {
     color: #fff;
     margin-bottom: 16px;
 }
+
 
 .footer-icon-list {
     display: flex;
@@ -472,11 +492,263 @@ body {
     background-color: #31d0aa;
 }
 
-.footer-container {
-    display: flex;
-    align-items: baseline;
-}
-
 .footer-logo-content {
     margin-right: 120px;
+}
+
+
+
+.subscribe-container {
+    display: flex;
+    gap: 24px;
+    justify-content: space-between;
+}
+
+.footer-input-label {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+    display: block;
+}
+
+.footer-input {
+    border: 1px solid #fff;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    background-color: transparent;
+    padding: 8px 16px;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+}
+
+.footer-input::placeholder {
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+}
+
+.footer-subscribe-btn {
+    border-radius: 4px;
+    padding: 8px 24px;
+    width: 165px;
+    height: 40px;
+    background-color: #4d5ae5;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #ffffff;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-subscribe-btn:hover,
+.footer-subscribe-btn:focus {
+    background: #404bbf;
+}
+
+.footer-subscribe-icon {
+    fill: #ffffff;
+}
+
+/* ========== Backdrop styles ========== */
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999999;
+    background-color: rgba(46, 47, 66, 0.4);
+    align-items: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal {
+    padding-bottom: 24px;
+    padding-top: 73px;
+    padding-left: 24px;
+    padding-right: 24px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 4px;
+    width: 408px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    background-color: #fcfcfc;
+
+}
+
+.modal-close-btn {
+    position: absolute;
+    top: 25px;
+    right: 24px;
+    border: none;
+    padding: 8px;
+    border-radius: 100%;
+    background-color: #e7e9fc;
+    stroke: rgba(0, 0, 0, 0.1);
+    fill: #2e2f42;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn:focus,
+.modal-close-btn:hover {
+    fill: #ffffff;
+    background-color: #404bbf;
+}
+
+.modal-close-btn-icon {
+    display: block;
+}
+
+.modal-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 16px;
+}
+
+.contacts-form-input-wrapper {
+    margin-bottom: 8px;
+}
+
+.contacts-form-label {
+    display: block;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    margin-bottom: 4px;
+}
+
+.input-icon-wrapper {
+    position: relative;
+}
+
+.input-field-icon {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    fill: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-form-input {
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    width: 100%;
+    height: 40px;
+    padding-left: 38px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.contacts-form-input:focus {
+    border-color: #4d5ae5;
+    outline: transparent;
+}
+
+.contacts-form-input:focus+.input-field-icon {
+    fill: #4d5ae5;
+}
+
+.form-textarea {
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    width: 100%;
+    height: 120px;
+    resize: none;
+    padding: 8px 16px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.form-textarea:focus {
+    border-color: #4d5ae5;
+}
+
+.form-textarea::placeholder {
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+}
+
+.form-privacy-checkbox-container {
+    margin-bottom: 24px;
+}
+
+.privacy-checkbox-label {
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+
+.form-privacy-own-checkbox {
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    display: inline-flex;
+    height: 16px;
+    width: 16px;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+    margin-right: 8px;
+}
+
+.form-privacy-checkbox:checked+.privacy-checkbox-label .form-privacy-own-checkbox {
+    background-color: #404bbf;
+    fill: #f4f4fd;
+    border-color: #404bbf;
+}
+
+.form-privacy-checkbox:focus+.privacy-checkbox-label .form-privacy-own-checkbox {
+    outline: 2px solid rgba(0, 0, 255, 0.5);
+}
+
+.privacy-link {
+    line-height: 1.33333;
+    text-decoration: underline;
+    color: #4d5ae5;
+}
+
+.form-submit-btn {
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background: #4d5ae5;
+    border-radius: 4px;
+    padding: 16px 32px;
+    min-height: 56px;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    border: none;
+    margin: 0 auto;
 }
